--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <button onclick="startGeneration()">Почати</button>
     <button onclick="stopGeneration()">Зупинити</button>
     <button onclick="clearTable()">Очистити</button>
+    <button onclick="saveTable()" >Зберегти</button>
 
     <table id="data-table">
         <thead>
